<resources>
    <string name="app_name">モザイク</string>
    <string name="aido">アイドルマスター</string>
    <string name="akunohana">惡の華</string>
    <string name="album">アルバムから選ぶ</string>
    <string name="bijyutu">この美術部</string>
    <string name="bleach">ブリーチ</string>
    <string name="deathNote">デスノート</string>
    <string name="demichan">デミちゃんは語りたい</string>
    <string name="gaburiiru">ガヴリールドロップ</string>
    <string name="girls_panzer">ガールズ＆パンツァー</string>
    <string name="hibike">響けユーフォニアム</string>
    <string name="original">オリジナル</string>
    <string name="overWatch">オーバーウォッチ</string>
    <string name="pcychoPass">サイコパス</string>
    <string name="suzumiya">ハルヒの憂鬱</string>
    <string name="touhou">東方妖々夢</string>
    <string name="karaKyokai">空の境界</string>
    <string name="easy">イージー</string>
    <string name="normal">ノーマル</string>
    <string name="hard">ハード</string>
    <string name="help">ヘルプ</string>
    <string name="sml_pic">ターゲットピクチャー</string>
    <string name="music">ミュージック</string>
    <string name="weixuantupian">ピクチャーを選びませんです</string>
    <string name="on">:オン</string>
    <string name="off">:オフ</string>
    <string name="hint">ヒント</string>
    <string name="coder">\n\n開発者：理子</string>
    <string name="chooseDiffcult">じゃ、改めて難易度を選択してください</string>
    <string name="chosedDiffcult">おっど、きみはもう難易度を選択したよ</string>
    <string name="newGame">新しいゲーム</string>
    <string name="conti">続く</string>
    <string name="nuli">もう少し頑張ってください、成功は目の前です（づ￣3￣）づ╭❤～</string>
    <string name="congratulation">おめでとうございます</string>
    <string name="congra_title">コングラチュレーション</string>
    <string name="replay">もう一度プレーしたい</string>
    <string name="other_pic">他のピクチャー</string>
    <string name="cant_move">このような移動は無理です</string>
    <string name="getPic_wrong">申し訳ありません、エラーが発生しました。ピクチャーを見つけなかった</string>
    <string name="unComplete">期待してください</string>
    <string name="helpMsg">一つのピクチャーを選びなさい。そして難易度を選択して 、ゲームを始めましょう。\n
    このパズルゲームは3種類あるパターンがある：簡単、正常、困難。クリックすると、自動でパズルを完成することができます。\n
    音楽をクリックして音楽の再生を制御する。\nもしあなたは満足できないハードモードを選択することができ、横滑り欄の遺骨級、からあなたの300秒挑戦~~~</string>

    <string name="OK">オーケー</string>
    <string name="HCG">地獄モード</string>
    <string name="cancel">キャンセル</string>
    <string name="costTime">\n\n時間は %1$d 分 %2$d 秒です</string>
    <string name="name_hint">ユーザー名を入力</string>
    <string name="pw_hint">パスワードを入力</string>
    <string name="username">ユーザー名</string>
    <string name="password">パスワード</string>
    <string name="wrong_nm">このユーザー名はありません…\n新しいのインフォをセーフして、必要ですか？</string>
    <string name="cancel_nm">ログインの後に、プレーしてください</string>
    <string name="null_nm">ユーザー名とパスワードを入力してください</string>
    <string name="welcome">お帰りなさい、%1$s</string>
    <string name="wrong_pw">入力したパスワードは違います、もう一度チェックしてください</string>
    <string name="high_score">スコアボード</string>
    <string name="nobody">ヌル</string>
    <string name="init_sco">0</string>
    <string name="your_score">君のハイスクール</string>
    <string name="goToHS">スコアボードへ</string>
    <string name="change_easy">モド：イージー</string>
    <string name="change_normal">モド：ノーマル</string>
    <string name="change_hard">モド：ハード</string>
    <string name="change_title">スコアボードを切り替える</string>
    <string name="cant_solve">注目してください：いま、ゲームは不可解になりました…</string>
    <string name="permission">プログラムはこの権限は必要です</string>
    <string name="permission_no_notice">君はこの権限を拒否した、設定に同意してください</string>
    <string name="userinfo_saved">サインアップ成功</string>
    <string name="logout">ログアウト</string>
    <string name="good_mor">おはよう、</string>
    <string name="good_am">こんにちは、</string>
    <string name="good_pm">こんにちは、</string>
    <string name="good_eve">こんばんは、</string>
    <string name="good_ngh">もう夜です、おやすみ、</string>
    <string name="log_in">ログイン</string>
    <string name="forget_pw">登録不能</string>
    <string name="sign_up">新規登録</string>
    <string name="shoukai">QwQ:\nこちらはモザイクです、ようこそ！</string>
    <string name="find_password">パスワードを取り戻す</string>
    <string name="mail_success">メールはちゃんと君のメールアドレスへ発信した</string>
    <string name="mail">メールアドレス</string>
    <string name="user_exists">このネームは既に存在します</string>
    <string name="fill_problem">何かおかしいです、もう一度チェックしてください</string>
    <string name="reset_password">パスワードをリセット</string>
    <string name="send_verification">検証コードを発信する</string>
    <string name="newPw">新たなパスワード</string>
    <string name="verification">検証コード</string>
    <string name="mail_hint">メールアドレスを入力してください</string>
    <string name="wrong_address">先に正確なメールアドレスを書きなさい</string>
    <string name="no_such_mail">このメールはまだサインアップしない</string>
    <string name="mail_content_op">このメールは、《モザイク》のパスワードをリセットために発信した。
        もし君はこの事を知らないなら、きっと誰かメールアドレスを勘違いしました。
        そうならば、このメールを無視してください、申し訳ありません…今度の検証コードは</string>
    <string name="mail_content_ed">です…絶対に他の者を伝えないてください!!! \n \n まだ、この検証コードは五分後に失効になります</string>
    <string name="reset_success">パスワードをリセットした、新たなパスワードてログインしてください</string>
    <string name="verification_wrong">検証コードは違います、もう一度チェックしてください</string>
    <string name="mail_exist">このメールはもうサインアップした…</string>
    <string name="time">時間:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="stepcount">\nステップ:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="fight">FIGHT</string>
</resources>





