<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/pink"
        android:text= "@string/reset_password"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:gravity="right"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/mailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="60dp"
                android:gravity="center"
                android:layout_weight="2"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification"
                android:gravity="right"
                android:layout_gravity="center"
                android:paddingRight="25dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/verificationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="60dp"
                android:gravity="center"
                android:layout_weight="2"
                android:maxLines="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newPw"
                android:gravity="right"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/passwordText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="60dp"
                android:gravity="center"
                android:layout_weight="2"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/send_verification"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/send_verification" />

            <Button
                android:id="@+id/ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="OK" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>