<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/pink">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/pink"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change_easy"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </TableRow>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/HS_name1"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nobody"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/HS_score1"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_sco"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/HS_name2"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nobody"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/HS_score2"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_sco"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/HS_name3"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nobody"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/HS_score3"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_sco"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/HS_name4"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nobody"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/HS_score4"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_sco"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/HS_name5"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nobody"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/HS_score5"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_sco"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/HS_name6"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nobody"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/HS_score6"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_sco"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/HS_name7"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nobody"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/HS_score7"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_sco"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/HS_name8"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nobody"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/HS_score8"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_sco"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/pink"/>
    </TableRow>
    <TableRow
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/easy"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/P_score_easy"
            android:width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/init_sco"
            android:textSize="25sp"
            android:gravity="center"/>
    </TableRow>
    <TableRow
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/normal"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/P_score_normal"
            android:width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/init_sco"
            android:textSize="25sp"
            android:gravity="center"/>
    </TableRow>
    <TableRow
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/P_score_hard"
            android:width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/init_sco"
            android:textSize="25sp"
            android:gravity="center"/>
    </TableRow>





</LinearLayout>