<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/newuser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cugb.xiaob.mozaiku.MainActivity">

    <com.cugb.xiaob.mozaiku.CustomVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:src="@drawable/white_test"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/toast02"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="@color/pink"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/nameText"
                android:layout_width="249dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name_hint"
                android:gravity="center"
                android:textColorHint="@color/gray"
                android:background="@drawable/text_view_border"
                android:layout_centerInParent="true"
                android:layout_gravity="left"
                android:textColor="@color/pink"
                android:layout_marginRight="60dp"
                android:maxLines="1"
                android:layout_weight="0.17" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"/>
        </LinearLayout>
        <TextView
                 android:layout_width="match_parent"
                 android:layout_height="20dp"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/passwordText"
                android:layout_width="249dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/pw_hint"
                android:gravity="center"
                android:textColorHint="@color/gray"
                android:background="@drawable/text_view_border"
                android:layout_centerInParent="true"
                android:layout_gravity="left"
                android:textColor="@color/pink"
                android:layout_marginRight="60dp"
                android:maxLines="1"
                android:layout_weight="0.17" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"/>
        </LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="20dp"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/mailText"
                android:layout_width="249dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_gravity="left"
                android:layout_marginRight="60dp"
                android:layout_weight="0.17"
                android:background="@drawable/text_view_border"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/mail_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/pink"
                android:textColorHint="@color/gray" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"/>
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="20dp"></LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/log_btn"
                android:text="@string/cancel" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:background="@drawable/log_btn"
                android:text="@string/OK" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>